<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/crim_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crim_name_view"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/aka_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aka_textView" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/age_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_textView" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/religion_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/religion_textView" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/type_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type_textView" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </TableRow>

    <TextView
        android:id="@+id/address_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_textView" />

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/msg_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_textView" />

    </TableRow>

</TableLayout>
