<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/toTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/to_textview"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/aboutTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toTextView"
        android:layout_below="@+id/toTextView"
        android:layout_marginTop="20dp"
        android:text="@string/about_textview"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/crimnameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/aboutTextView"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/aboutTextView"
        android:ems="10"
        android:hint="@string/crim_hint_textview"
        android:inputType="none"
        android:focusableInTouchMode="false"
        android:onClick="searchCrim"
         />

    <EditText
        android:id="@+id/toEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/aboutTextView"
        android:layout_alignLeft="@+id/crimnameEditText"
        android:ems="10"
        android:hint="@string/pol_hint_view"
        android:inputType="textPersonName"
        android:focusableInTouchMode="false"
        android:onClick="searchPol" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aboutTextView"
        android:layout_alignRight="@+id/crimnameEditText"
        android:layout_below="@+id/aboutTextView"
        android:layout_marginTop="51dp"
        android:ems="10"
        android:hint="@string/hint_desc_textview"
        android:inputType="textMultiLine"
        android:maxLines="@integer/max_desc_lines" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sendButton"
        android:layout_alignBottom="@+id/sendButton"
        android:layout_alignRight="@+id/descriptionEditText"
        android:layout_toRightOf="@+id/sendButton"
        android:onClick="sendFunc"
        android:text="@string/send_button" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/descriptionEditText"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="21dp"
        android:text="@string/cancel_button" />

</RelativeLayout>
