<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:id="@+id/rootLayout" >

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="108dp"
        android:onClick="loginfun"
        android:text="@string/button_login" />

    <EditText
        android:id="@+id/etUser"
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPass"
        android:layout_alignLeft="@+id/bSubmit"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/hint_login" >
        <requestFocus />
		</EditText>
    <EditText
        android:id="@+id/etPass"
        style="@style/MyEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bSubmit"
        android:layout_alignLeft="@+id/etUser"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword" />

        
    

</RelativeLayout>
